test/nexj/invalidbase/soadefs/Perf.soadef
<SOADefinition name="nexj:example:performance" version="1.0">
   <Service/>
</SOADefinition>
